fixtures/frontend/milestone-2/valid/pipe-accumulate-signal-wakeup/main.aivi
type Unit -> Int -> Int
func step = tick current=>    current + 1

@source timer.every 120 with {
    immediate: True
}
signal tick : Signal Unit

signal retried : Signal Int = tick
 +|> 0 step
