fixtures/frontend/milestone-2/invalid/source-legacy-quantity-option/main.aivi
domain Duration over Int
    literal s : Int -> Duration

@source timer.every 120 with {
    jitterMs: 5s
}
sig tick : Signal Unit
